[1.26] update link to 65 - arm64.html

--- a/arm64.html
+++ b/arm64.html
@@ -177,7 +177,7 @@ time clock с питанием от батарейки. По этой причи
 
 <p>
 Последний поддерживаемая версия OpenBSD/arm64
-<a href="65.html">OpenBSD 6.5</a>.
+<a href="https://www.openbsd.org/65.html">OpenBSD 6.5</a>.
 Здесь вы можете найти
 <a href="https://ftp.openbsd.org/pub/OpenBSD/6.5/arm64/INSTALL.arm64">
 инструкции по установке OpenBSD/arm64</a>.
