--- a/faq/ports/ports.html
+++ b/faq/ports/ports.html
@@ -5,7 +5,7 @@
      on a new line, and try to keep the general formatting consistent
      with the rest of the pages -->
 
-<title>Порты OpenBSD: работаем с портами</title>
+<title>Порты OpenBSD: Работа с портами</title>
 <meta charset=utf-8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../../openbsd.css">
@@ -23,47 +23,30 @@ td, th {
 }
 </style>
 
-<!--
-Copyright (c) 2005-2009 Steven Mestdagh <steven@openbsd.org>
-
-Permission to use, copy, modify, and distribute this documentation for
-any purpose with or without fee is hereby granted, provided that the
-above copyright notice and this permission notice appear in all copies.
-
-THE DOCUMENTATION IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL
-WARRANTIES WITH REGARD TO THIS DOCUMENTATION INCLUDING ALL IMPLIED
-WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE
-AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL
-DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR
-PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER
-TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
-PERFORMANCE OF THIS DOCUMENTATION
--->
-
 <h2 id=OpenBSD>
 <a href="../../index.html">
 <i>Open</i><b>BSD</b></a>
-Порты - работаем с портами
+Порты - Работа с портами
 <small>
-<a href="index.html">[Порты - на главную]</a>
+<a href="index.html">[Порты - На главную]</a>
 </small>
 </h2>
 <hr>
 
 <ul>
   <li><a href="#PortsIntro"   >Введение</a>
-  <li><a href="#PortsFetch"   >Скачиваем дерево портов</a>
+  <li><a href="#PortsFetch"   >Загрузка дерева портов</a>
   <li><a href="#PortsConfig"  >Настройка системы портов</a>
-  <li><a href="#PortsSearch"  >Поиск дерева портов</a>
-  <li><a href="#PortsInstall" >Установка: простой пример</a>
-  <li><a href="#PortsClean"   >Отчистка после собрки</a>
-  <li><a href="#PortsDelete"  >Удаление пакета портов</a>
+  <li><a href="#PortsSearch"  >Поиск в дереве портов</a>
+  <li><a href="#PortsInstall" >Пример простой установки</a>
+  <li><a href="#PortsClean"   >Отчистка после сборки</a>
+  <li><a href="#PortsDelete"  >Удаление пакета, собранного из порта</a>
   <li><a href="#PortsFlavors" >Использование Flavors и Subpackages</a>
   <li><a href="#dpb"          >Использование dpb для сборки Multiple портов</a>
-  <li><a href="#PortsSecurity">Обновление безопасности (-stable)</a>
-  <li><a href="#PkgSig"       >Сигнатуры пакетов</a>
+  <li><a href="#PortsSecurity">Обновления безопасности (-stable)</a>
+  <li><a href="#PkgSig"       >Подписи пакетов</a>
   <li><a href="#Problems"     >Сообщить об ошибке</a>
-  <li><a href="#Helping"      >Как нам помочь</a>
+  <li><a href="#Helping"      >Как помочь нам</a>
 </ul>
 
 <hr>
@@ -158,7 +141,7 @@ More information about the ports system may be found in these man pages:
   (installation directory) framework, etc.
 </ul>
 
-<h2 id="PortsFetch">Скачиваем дерево портов</h2>
+<h2 id="PortsFetch">Загрузка дерева портов</h2>
 
 Once you have decided which flavor of the ports tree you want, you can
 get it from different sources.
@@ -272,7 +255,7 @@ working directories as a regular user.
 Again, ports can be <i>built</i> as a user, but must be <i>installed</i>
 by root or with <a href="https://man.openbsd.org/doas">doas(1)</a>.
 
-<h2 id="PortsSearch">Поиск дерева портов</h2>
+<h2 id="PortsSearch">Поиск в дереве портов</h2>
 
 Once you have the ports tree and the portslist package in place on your 
 system, it becomes very easy to search for software.
@@ -344,7 +327,7 @@ The above is still a very basic search.
 With SQL, just about anything can be searched for, including dependencies,
 configure flags, shared libraries, etc.
 
-<h2 id="PortsInstall">Установка: простой пример</h2>
+<h2 id="PortsInstall">Пример простой установки</h2>
 
 For clarity's sake, let's consider a simple example: rsnapshot.
 This application has several build dependencies: devel/autoconf/2.69
@@ -427,7 +410,7 @@ this usually has one of two causes:
   <li>You simply don't have enough RAM.
 </ul>
 
-<h2 id="PortsClean">Отчистка после собрки</h2>
+<h2 id="PortsClean">Очистка после сборки</h2>
 
 You probably want to clean the port's default working directory after
 you have built the package and installed it.
@@ -472,7 +455,7 @@ from <code>auto</code> to <code>Yes</code>.
 $ <b>make package BULK=Yes</b>
 </pre>
 
-<h2 id="PortsDelete">Удаление пакета портов</h2>
+<h2 id="PortsDelete">Удаление пакета, собранного из порта</h2>
 
 It is very easy to uninstall a port:
 
@@ -626,7 +609,7 @@ This is the recommended way to use it, but it can also run as a regular user.
 Additionally, the <a href="https://man.openbsd.org/proot">proot(1)</a> utility
 can be used to further isolate building operations.
 
-<h2 id="PortsSecurity">Обновление безопасности (-stable)</h2>
+<h2 id="PortsSecurity">Обновления безопасности (-stable)</h2>
 
 When serious bugs or security flaws are discovered in third party software,
 they are fixed in the -stable branch of the ports tree.
@@ -640,7 +623,7 @@ You can keep your tree up to date with <a href="../../anoncvs.html">CVS</a>
 and subscribe to the ports-changes <a href="../../mail.html">mailing list</a>
 to receive security announcements related to software in the ports tree.
 
-<h2 id="PkgSig">Сигнатуры пакетов</h2>
+<h2 id="PkgSig">Подписи пакетов</h2>
 
 Signatures are a good way to make sure packages are legitimate and not
 corrupted.
@@ -738,7 +721,7 @@ Alternatively, you can:
   the various files produced by <code>gcc -save-temps</code>.
 </ul>
 
-<h2 id="Helping">Как нам помочь</h2>
+<h2 id="Helping">Как помочь нам</h2>
 
 There are many ways you can help.
 They are listed below, by increasing order of difficulty.
