[1.35] update link to the CONTRIBUTORS list - index.html

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <em>This site is a translated version of <a href="https://www.openbsd.org/">openbsd.org</a>.
       Translation project is organized by <a href="https://github.com/alexander-naumov">Alexander Naumov</a>
       and is going with the support of
-      <a href="https://github.com/openbsd-ru/openbsd-ru.github.io/blob/master/README.md#CONTRIBUTORS">
+      <a href="https://github.com/openbsd-ru/openbsd-ru.github.io/graphs/contributors">
       volunteers</a>.</em><br>
       </small>
     </td>
