[1.734] better wording - index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <h1>Скачать OpenBSD</h1>
       <ul>
-        <li><a href="faq/faq4.html#Download">Download</a>
+        <li><a href="faq/faq4.html#Download">Загрузка</a>
       </ul>
 
       <h1>Исходники</h1>
