[1.238] sync - faq/faq1.html

--- a/faq/faq1.html
+++ b/faq/faq1.html
@@ -172,10 +172,8 @@ OpenBSD поставляется с обширной документацией 
   <li><a href="https://man.openbsd.org/syspatch">syspatch(8)</a>
   - применение <a href="https://www.openbsd.org/faq/faq10.html#Patches">
   обновлений безопасности и надёжности</a>.
-  <!-- XXXrelease
   <li><a href="https://man.openbsd.org/sysupgrade">sysupgrade(8)</a>
-  - upgrade to the next OpenBSD release or a newer snapshot.
-  -->
+  - обновление до следующего релиза OpenBSD или нового снапшота.
   <li><a href="https://man.openbsd.org/dmesg">dmesg(8)</a>
   - повторный показ сообщений ядра в момент загрузки.
   <li><a href="https://man.openbsd.org/doas">doas(1)</a>
