[1.323] sync - faq/faq5.html

--- a/faq/faq5.html
+++ b/faq/faq5.html
@@ -69,11 +69,8 @@ FAQ - Собираем систему из исходников
 Последний доступный snapshot это все, что обычно необходимо для запуска -current.
 Если вы хотите собрать все из исходников, используйте только последний доступный
 snapshot.
-<!-- XXXrelease
-This can be done with the
-<a href="https://man.openbsd.org/susupgrade">sysupgrade(8)</a> utility's
-<code>-c</code> flag.
--->
+Этого можно добиться при помощи опции <code>-c</code> утилиты
+<a href="https://man.openbsd.org/susupgrade">sysupgrade(8)</a>.
 Проверьте страницу о
 <a href="current.html">последних -current и использования snapshots</a>,
 чтобы ознакомиться с последними изменениями конфигурации или дополнительными
