[1.347] update link to the CONTRIBUTORS list - openssh/index.html

--- a/openssh/index.html
+++ b/openssh/index.html
@@ -102,7 +102,7 @@ OpenSSH включен во многие коммерческие продукт
 <em>This site is a translated version of <a href="https://www.openssh.com/">openssh.com</a>.
 Translation project is organized by <a href="https://github.com/alexander-naumov">Alexander Naumov</a>
 and is going with the support of
-<a href="https://github.com/openbsd-ru/openbsd-ru.github.io/blob/master/README.md#CONTRIBUTORS">
+<a href="https://github.com/openbsd-ru/openbsd-ru.github.io/graphs/contributors">
 volunteers</a>.</em>
 </small>
 </table>
