--- a/openntpd/index.html
+++ b/openntpd/index.html
@@ -64,7 +64,7 @@ OpenNTPD свободно распространяется в соответст
 <em>This site is a translated version of <a href="http://www.openntpd.org/">openntpd.org</a>.
 Translation project is organized by <a href="https://github.com/alexander-naumov">Alexander Naumov</a>
 and is going with the support of
-<a href="https://github.com/openbsd-ru/openbsd-ru.github.io/blob/master/README.md#CONTRIBUTORS">
+<a href="https://github.com/openbsd-ru/openbsd-ru.github.io/graphs/contributors">
 volunteers</a>.</em>
 </small>
 </table>
