[1.56] update CONTRIBUTORS link - opensmtp/index.html

--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -84,7 +84,7 @@ Sales of these items help to fund development.
 <em>This site is a translated version of <a href="https://www.opensmtpd.org/">opensmtpd.org</a>.
 Translation project is organized by <a href="https://github.com/alexander-naumov">Alexander Naumov</a>
 and is going with the support of
-<a href="https://github.com/openbsd-ru/openbsd-ru.github.io/blob/master/README.md#CONTRIBUTORS">
+<a href="https://github.com/openbsd-ru/openbsd-ru.github.io/graphs/contributors">
 volunteers</a>.</em>
 </small>
 </table>
