--- a/libressl/index.html
+++ b/libressl/index.html
@@ -90,7 +90,7 @@
 <em>This site is a translated version of <a href="https://www.libressl.org">libressl.org</a>.
 Translation project is organized by <a href="https://github.com/alexander-naumov">Alexander Naumov</a>
 and is going with the support of
-<a href="https://github.com/openbsd-ru/openbsd-ru.github.io/blob/master/README.md#CONTRIBUTORS">
+<a href="https://github.com/openbsd-ru/openbsd-ru.github.io/graphs/contributors">
 volunteers</a>.</em>
 </small>
 </table>
