--- a/openssh/index.html
+++ b/openssh/index.html
@@ -53,7 +53,7 @@
       </h1>
 
       <p id="callout">
-        Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.0">OpenSSH 8.0</a> состоялся 18 апреля 2019 года.<br>
+        Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.1">OpenSSH 8.1</a> состоялся 9 октября 2019 года.<br>
 <p>
 OpenSSH это основной инструмент для создания соединений по протоколу SSH.
 Он шифрует весь траффик, что исключает прослушивание, захват соединений,
