[1.540] update link to FAQ7 - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -139,12 +139,12 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq6.html#NFS"      >Использование NFS</a>
 </ul>
 
-<h3><a href="https://www.openbsd.org/faq/faq7.html">Управление клавиатурой и дисплеем</a></h3>
+<h3><a href="faq7.html">Управление клавиатурой и дисплеем</a></h3>
 <ul>
-<li><a href="https://www.openbsd.org/faq/faq7.html#Consoles"     >Working on the Console</a>
-<li><a href="https://www.openbsd.org/faq/faq7.html#VGAConsoles"  >Консоли для VGA Hardware</a>
-<li><a href="https://www.openbsd.org/faq/faq7.html#Blanker"      >Blanking an Inactive Console</a>
-<li><a href="https://www.openbsd.org/faq/faq7.html#SerCon"       >Настройка Serial Console</a>
+<li><a href="faq7.html#Consoles"   >Работа в консоли</a>
+<li><a href="faq7.html#VGAConsoles">Консоли на VGA Hardware</a>
+<li><a href="faq7.html#Blanker"    >Отчистка неактивной консоли</a>
+<li><a href="faq7.html#SerCon"     >Последовательный порт для доступа к консоли</a>
 </ul>
 
 <h3><a href="faq8.html">Общие вопросы</a></h3>
